<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/chat_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_name"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/button_sign"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:onClick="signIn"/>

    <TextView
        android:id="@+id/texLogIn"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:onClick="tapToLogIn"
        android:clickable="true"/>

</LinearLayout>